Filter out affected elements with unsupported ecosystem (#174)